@@ -1,4 +1,9 @@
 2015-11-28 Matt Reilly kb1vc (kb1vc@kb1vc.org)
+	Refactor AudioRX/AudioTX into BaseBandRX/TX and separate
+	mod/demod units.
+	
+	
+2015-11-28 Matt Reilly kb1vc (kb1vc@kb1vc.org)
 	* wow.... not many updates to the ChangeLog since the conversion to Git.
 	Changes from 3.5:
 	* Addition of arduino sketches for hardware to do TR and bandswitching.
